fix: checkbox alignment

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ text-transform: capitalize;
 }
 
 .form-check-label{
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .title, .subtitle, .p, .form-label, .form-check-label{
